[gd_scene load_steps=10 format=2]

[ext_resource path="res://sprites/enemies/imp/ImpEnemy.png" type="Texture" id=1]
[ext_resource path="res://ImpEnemy.gd" type="Script" id=2]
[ext_resource path="res://sprites/effects/SmokeNew.png" type="Texture" id=3]

[sub_resource type="OccluderPolygon2D" id=4]
polygon = PoolVector2Array( -28, -9, -28, -24, -24, -24, -24, -36, -20, -36, -20, -40, -16, -40, -16, -44, 8, -44, 8, -41, 15, -41, 16, -44, 28, -44, 28, -48, 24, -48, 24, -52, 32, -52, 32, -48, 36, -48, 36, -44, 40, -44, 40, -36, 36, -36, 36, -28, 32, -28, 32, -24, 28, -24, 28, -12, 24, -12, 24, 32, 20, 32, 20, 40, 28, 40, 28, 44, 32, 44, 32, 52, -36, 52, -36, 44, -32, 44, -32, 40, -28, 40, -28, 24, -32, 24, -32, 12, -28, 12, -28, 0, -24, 0, -25, -8 )

[sub_resource type="CapsuleShape2D" id=1]
radius = 28.0
height = 54.0

[sub_resource type="CircleShape2D" id=2]
radius = 1229.0

[sub_resource type="CapsuleShape2D" id=3]
radius = 26.0
height = 54.0

[sub_resource type="CanvasItemMaterial" id=5]
particles_animation = true
particles_anim_h_frames = 1
particles_anim_v_frames = 5
particles_anim_loop = false

[sub_resource type="Curve" id=6]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.191176, 0.567045 ), 1.93182, 1.93182, 0, 0, Vector2( 0.485294, 0.839773 ), 0.0, 0.0, 0, 0, Vector2( 0.985294, 0.457955 ), -1.77727, 0.0, 0, 0 ]

[node name="ImpEnemy" type="KinematicBody2D" groups=["enemy"]]
z_index = 1
script = ExtResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -282, 233 )

[node name="VisibilityNotifier2D2" type="VisibilityNotifier2D" parent="."]
position = Vector2( 261, 239 )

[node name="VisibilityNotifier2D3" type="VisibilityNotifier2D" parent="."]
position = Vector2( -283, -250 )

[node name="VisibilityNotifier2D4" type="VisibilityNotifier2D" parent="."]
position = Vector2( 275, -246 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource( 4 )

[node name="RayCast2D" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 1200, 0 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( -1, 8 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 4, 0 )
texture = ExtResource( 1 )

[node name="Area2D - Damage" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D - Damage"]
position = Vector2( 0, 4 )
shape = SubResource( 1 )

[node name="Area2D - Detection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D - Detection"]
shape = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 4 )
shape = SubResource( 3 )

[node name="Tween" type="Tween" parent="."]

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
material = SubResource( 5 )
emitting = false
amount = 25
preprocess = 5.5
speed_scale = 1.5
explosiveness = 0.7
randomness = 0.14
lifetime_randomness = 0.07
draw_order = 1
texture = ExtResource( 3 )
emission_shape = 1
emission_sphere_radius = 48.15
gravity = Vector2( 0, 5 )
angular_velocity = 13.22
angular_velocity_random = 1.0
orbit_velocity_random = 0.77
linear_accel = 14.67
damping = 3.66
scale_amount = 0.9
scale_amount_random = 1.0
scale_amount_curve = SubResource( 6 )
anim_speed = 1.87
anim_speed_random = 1.0

[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="screen_exited" from="VisibilityNotifier2D2" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="screen_exited" from="VisibilityNotifier2D3" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="screen_exited" from="VisibilityNotifier2D4" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="body_entered" from="Area2D - Damage" to="." method="_on_Area2D__Damage_body_entered"]
[connection signal="body_entered" from="Area2D - Detection" to="." method="_on_Area2D__Detection_body_entered"]
[connection signal="body_exited" from="Area2D - Detection" to="." method="_on_Area2D__Detection_body_exited"]
